wijziging in gewijzigde wijziging

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>Dit is een aanpassing</h2>
 <p> een aanpassing op een aanpassing </p>
+<h3> nu een aanpassing op de aangepaste aanpassing </h3>
 </body>
 </html>
