--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h2>Dit is een aanpassing</h2>
 <p> een aanpassing op een aanpassing </p>
 <h3> nu een aanpassing op de aangepaste aanpassing </h3>
-<p> nu bouw ik een branch </p>
+<p> nu bouw ik een branch
+Nu volgt een aanpassing op de de eerste branch</p>
 </body>
 </html>
